Fix overflow-x

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 .app-container {
